--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,24 @@ body {
 
 }
 
+.input-group autocomplete input {
+	border:0px;
+	width:100%;
+	height:100%;
+	background-color:transparent;
+}
+
+.input-group autocomplete input:hover ,
+.input-group autocomplete input:active ,
+.input-group autocomplete input:focus{
+	border:0px !important;
+	width:100%;
+	height:100%;
+	background-color:transparent;
+	box-shadow: 0px 0px 0px #000000;
+   text-shadow: 0px 0px 0px #000000;
+}
+
 .clear { clear:both;}
 
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
