--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,30 @@ body {
 	background-color:transparent;
 }
 
+.input-group autocomplete ul {
+	background-color:white;
+	-webkit-border-bottom-right-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border:1px solid #ccc;
+	margin:0px;
+	padding:0px;
+	list-style:none;
+}
+
+autocomplete li {
+	padding-left:20px;
+}
+
+autocomplete li:hover {
+	background-image: linear-gradient(to bottom,#f2dede 0,#ebcccc 100%);	
+	background-repeat: repeat-x;
+
+}
+
 .input-group autocomplete input:hover ,
 .input-group autocomplete input:active ,
 .input-group autocomplete input:focus{
