--- a/public/partials/stats.html
+++ b/public/partials/stats.html
@@ -82,7 +82,7 @@
 						<label class="control-label col-md-3">Clave de agrupación:</label>
 						<div class="col-md-7">
 							<select ng-model="campo"  class="form-control">
-								<option ng-repeat="o in campos" ng-value="o">{{o|translate}}</option>
+								<option ng-repeat="o in campos" ng-value="o" ng-selected="o==campo">{{o|translate}}</option>
 							</select>
 						</div>
 						<div class="col-md-2">
