Ejemplos CSV importación

--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -1,7 +1,15 @@
 <div class="row">
 	<div class="col-lg-12">
 		<p class="text-center">
-			Desde este apartado puede proceder a la carga masiva de datos según el formato acordado. Para ello puede arrastrar uno o varios ficheros a la caja mostrada.
+			Desde este apartado puede proceder a la carga masiva de datos según el formato acordado. Para ello puede arrastrar uno o varios ficheros a la caja mostrada.<br />Descargar ejemplos:
+		</p>
+		<p class="text-center">
+
+			<a class="btn btn-default" target="_blank" href="/files/ej_carga_cabecera.csv">Ejemplo 1</a>
+			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera.csv">Ejemplo 2</a>
+			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera_error.csv">Ejemplo 3</a>
+			<a class="btn btn-default" target="_blank" href="/files/ej_carga_sin_cabecera_ok.csv">Ejemplo 4</a>
+			
 		</p>
 		<div class="text-center">
 			<img src="imgs/ejemplofichero.png"/>
