--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -99,6 +99,20 @@
 							<input ng-model="filtrotxtprocedimiento.$" class="form-control"/>
 						</div>
 					</div>
+
+					<div class="form-group">
+						<label class="control-label col-md-3">Etiquetas:</label>
+						<div class="col-md-9">
+							<div ng-repeat="etiqueta in etiquetas track by $index" class="col-md-12">
+								<label class="control-label col-md-3">
+									<input type="checkbox" name="" id="et{{$index}}" value="{{etiqueta._id}}" >
+								</label>
+								<div class="col-md-9">
+									<label for="et{{$index}}"> <span class="label label-danger"  style="color:{{etiqueta.color}}" title="{{etiqueta.descripcion}}" >{{etiqueta._id}}</span></label>
+								</div>
+							</div>
+						</div>
+					</div>
 				</form>
 			</div>
 		</div>
